# admin-practice

./: main.py  manage.py  pyproject.toml
admin_practice/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_author.py
blog/templates/blog/: post_list.html
